# MuTate

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBT.md  LICENSE-MIT  README.md  flake.nix
crates/assets/: Cargo.toml
crates/assets/src/: assets.rs  build.rs  lib.rs
crates/dropwire/: Cargo.toml  README.md
crates/dropwire/src/: ct.rs  lib.rs  rt.rs
crates/dropwire/tests/: ui.rs
crates/dropwire/tests/ui/: disarm_composed_wire.rs  disarm_wire.rs  drop_armed_wire.rs  drop_armed_wire.stderr  drop_composed_wire.rs  drop_composed_wire.stderr
crates/macros/: Cargo.toml
crates/macros/assets/shaders/reflect/: push_constants.reflection.json  push_constants_arg.xx3h
crates/macros/shaders/reflect/: descriptors.slang  push_constants.slang  push_constants_arg.slang
crates/macros/src/: force.rs  lib.rs  pipeline.rs  push.rs  root.rs  slang.rs  stage.rs
crates/macros/tests/: compute.rs  slang.rs  stage.rs
crates/macros/tests/compute/pass/: independently_declared.rs  with_inline_push.rs  with_inline_stage.rs
crates/macros/tests/push/pass/: empty.rs  minimal.rs  shared.rs  split.rs
crates/macros/tests/slang/fail/: derive_gpu_type_missing_repr_c.rs  descriptor_newtype_kind_mixing.rs  descriptor_newtype_kind_mixing.stderr  no_from_newtype.rs  no_from_newtype.stderr  no_from_slang.rs  no_from_slang.stderr
crates/macros/tests/slang/pass/: derive_gpu_type_empty.rs  derive_gpu_type_flat.rs  derive_gpu_type_nested.rs  descriptor.rs  descriptor_newtype.rs  device_address_newtype_and_null.rs  from_base_into_wrapper.rs  newtype.rs  newtype_satisfies_gpu_type.rs  scalar.rs  scalar_from_base_into_wrapper.rs
crates/macros/tests/stage/: fail-shader-missing.rs  fail-shader-missing.stderr
crates/macros/tests/stage/fail/: shader_missing.rs  shader_missing.stderr
crates/macros/tests/stage/pass/: compute.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/assets/shaders/reflect/: descriptors.reflection.json  descriptors.xx3h  push_constants.xx3h  push_constants_arg.reflection.json  push_constants_global.reflection.json  push_constants_global.xx3h  ssbo.reflection.json  ssbo.xx3h  ubo.reflection.json  ubo.xx3h
crates/tests/assets/shaders/test/: hello_compute.reflection.json  hello_compute.xx3h
crates/tests/shaders/reflect/: push_constants_global.slang  ssbo.slang  ubo.slang
crates/tests/src/: main.rs
crates/tests/tests/: compute.rs  push.rs  slang.rs  stage.rs
crates/tests/tests/compute/pass/: independently_declared.rs  with_inline_push.rs  with_inline_stage.rs
crates/tests/tests/push/pass/: empty.rs  minimal.rs  ring.rs  shared.rs  split.rs
crates/tests/tests/slang/fail/: derive_gpu_type_missing_repr_c.rs  derive_gpu_type_missing_repr_c.stderr  descriptor_newtype_kind_mixing.rs  descriptor_newtype_kind_mixing.stderr  no_from_newtype.rs  no_from_slang.rs  no_from_slang.stderr
crates/tests/tests/slang/pass/: descriptor.rs  (+9 more)
crates/untorn/: Cargo.toml
crates/untorn/src/: lib.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: context.rs  descriptors.rs  image.rs  lib.rs  queue.rs  util.rs
crates/vulkan/src/context/: descriptors.rs  device.rs  mod.rs  queue.rs  vulkan.rs
crates/vulkan/src/device/: descriptors.rs  device.rs  fence.rs  memory.rs  mod.rs  queue.rs
crates/vulkan/src/dispatch/: cb.rs  command.rs  compute.rs  graphics.rs  mod.rs  pool.rs  pw.rs  submit.rs  sync.rs  transfer.rs
crates/vulkan/src/instance/: mod.rs
crates/vulkan/src/pipeline/: layout.rs  mod.rs  push.rs  stage.rs
crates/vulkan/src/present/: mod.rs  surface.rs  swapchain.rs
crates/vulkan/src/resource/: buffer.rs  image.rs  mod.rs  shader.rs  ubo.rs
crates/vulkan/src/slang/: layout.rs  mod.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/assets/shaders/: hello.reflection.json
examples/minimal/shaders/hello/: compute.slang
examples/minimal/src/: draw.rs  main.rs
mutate-lib/: Cargo.toml  build.rs
mutate-lib/assets/shaders/test/: all_handles.reflection.json  all_handles.xx3h  compute.reflection.json  compute.xx3h  hello_compute.reflection.json  hello_compute.xx3h  increment.reflection.json  increment.xx3h
mutate-lib/shaders/lib/: descriptors.slang
mutate-lib/shaders/test/: all_handles.slang  compute.slang  hello_compute.slang  increment.slang
mutate-lib/src/: audio.rs  context.rs  lib.rs  pipewire.rs  tree.rs
mutate-lib/src/audio/: import.rs  mod.rs  timing.rs
mutate-lib/src/context/: descriptors.rs  mod.rs  queue.rs
mutate-lib/src/dsp/: bank.rs  dft.rs  fir.rs  iir.rs  iso226.rs  mod.rs  spectrogram.rs  window.rs
mutate-lib/tests/: context.rs  dispatch.rs  pipeline.rs  resource.rs  vulkan_context.rs
mutate-visualizer/: Cargo.toml  build.rs
mutate-visualizer/assets/shaders/audio/: rms.reflection.json  rms.xx3h
mutate-visualizer/assets/shaders/pulse/: compute.reflection.json  compute.xx3h  pulse.reflection.json  pulse.xx3h
mutate-visualizer/assets/shaders/ring/: compute.reflection.json  compute.xx3h
mutate-visualizer/assets/shaders/spectrum/: compute.reflection.json  compute.xx3h
mutate-visualizer/assets/shaders/triangle/: fragment.reflection.json  fragment.xx3h  vertex.reflection.json  vertex.xx3h
mutate-visualizer/shaders/: fragment.slang  vertex.slang
mutate-visualizer/shaders/audio/: rms.slang
mutate-visualizer/shaders/pulse/: compute.slang  pulse.slang
mutate-visualizer/shaders/ring/: compute.slang
mutate-visualizer/shaders/spectrum/: compute.slang
mutate-visualizer/src/: assets.rs  buffer.rs  image.rs  main.rs  node.rs  present.rs  render_target.rs  swapchain.rs  util.rs  vk_context.rs  window.rs
mutate-visualizer/src/audio/: colors.rs  cqt.rs  iso226.rs  kweight.rs  mod.rs  raw.rs  rms.rs
mutate-visualizer/src/graph/: mod.rs
mutate-visualizer/src/graph/node/: mod.rs
mutate-visualizer/src/node/: audio.rs  mod.rs  video.rs
mutate-visualizer/src/node/audio/: colors.rs  cqt.rs  iso226.rs  kweight.rs  mod.rs  raw.rs  rms.rs
mutate-visualizer/src/node/video/: mod.rs  triangle.rs
mutate-visualizer/src/video/: mod.rs  present.rs  pulse.rs  ring.rs  spectrum.rs  triangle.rs
(+16 files in other folders)
