[package]
name = "mutate"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ash = "0.38.0"
gpu-allocator = {version="0.28.0", default-features=false, features=["vulkan", "std"]}
raw-window-handle = "0.6.2"
winit = "0.30.12"

# Build fast dependencies
[profile.dev.package."*"]
codegen-units = 1
opt-level = 3

# Build fast build scripts and proc-macros.
[profile.dev.build-override]
codegen-units = 1
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"