[package]
name = "mutate-lib"
description = "Converts audio streams into raw outputs used in the µTate visualizer"
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pipewire = {workspace = true, features = ["v0_3_44"]}
ringbuf.workspace = true
thiserror.workspace = true
ash.workspace = true

# dsp dependencies
aligned = {workspace = true, optional = true}
num-complex = {workspace = true, optional = true}
num-traits = {workspace = true, optional = true}

# workbench dependencies
clap = {workspace = true, features=["derive"], optional = true}

# PMR dependencies
pm-remez = {workspace = true, optional = true}

mutate-assets = {workspace = true, features = ["runtime"]}
mutate-vulkan = {workspace = true, optional = true}
mutate-slide = {workspace = true, optional = true}

[build-dependencies]
mutate-assets = {workspace = true, features = ["build"]}

[dev-dependencies]
ctrlc.workspace = true

[[example]]
name = "pipewire"
path = "src/pipewire.rs"

[features]
default = []
# DEBT move tree into dsp
dsp = ["dep:num-complex", "dep:num-traits", "dep:mutate-slide", "dep:aligned"]
vulkan = ["dep:mutate-vulkan"]
workbench = ["dep:clap", "dsp"]
pmr = ["dep:pm-remez", "dep:clap", "dsp"]

[[bin]]
name = "workbench"
required-features = ["workbench"]

[[bin]]
name = "pmr"
required-features = ["pmr"]

[package.metadata.mutate]
# 📦 Attention packagers!  The build.rs sets MUTATE_BUILD_ASSETS_DIR for
# hardcoding into default asset lookups.  Set the path absolutely or relative to
# the installed binary.  This setting does not affect debug binary behavior.
# See MUTATE_ASSETS_DIR for runtime settings.
asset_dir="../shared/mutate/assets"