[package]
name = "mutate-visualizer"
description = "Music visualizer"
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

default-run = "mutate-visualizer"

[dependencies]
ash.workspace = true
clap = {workspace = true, features = ["derive"]}
dirs.workspace = true
palette.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
rgb.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
winit.workspace = true

mutate-lib.workspace = true

[build-dependencies]
toml.workspace = true

[package.metadata.mutate]
# 📦 Attention packagers!  The build.rs sets MUTATE_BUILD_ASSETS_DIR for
# hardcoding into assets.rs.  Set the path absolutely or relative to the
# installed binary.  This setting does not affect debug builds.  See
# MUTATE_ASSETS_DIR for runtime settings.
asset_dir="../shared/mutate/assets"