[package]
name = "mutate-visualizer"
description = "Music visualizer"
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

default-run = "mutate-visualizer"

[dependencies]
ash.workspace = true
clap = {workspace = true, features = ["derive"]}
palette.workspace = true
rand.workspace = true
raw-window-handle.workspace = true
rgb.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
winit.workspace = true

mutate-lib.workspace = true
mutate-assets = {workspace = true, features = ["runtime"]}

[build-dependencies]
toml.workspace = true
mutate-assets = {workspace = true, features = ["build"]}

[package.metadata.mutate]
# 📦 Attention packagers!  The build.rs sets MUTATE_BUILD_ASSETS_DIR for
# hardcoding into default asset lookups.  Set the path absolutely or relative to
# the installed binary.  This setting does not affect debug binary behavior.
# See MUTATE_ASSETS_DIR for runtime settings.
asset_dir="../shared/mutate/assets"