[package]
name = "mutate-assets"
description = "Build support to discover, package, and use static files."
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror.workspace = true

# feature gated
dirs = {workspace = true, optional = true}
toml = {workspace = true, optional = true}
xxhash-rust = {workspace = true, optional = true, features = ["xxh3"]}

[features]
runtime = ["dep:dirs"]
build = ["dep:toml", "xxhash-rust"]
# behavior for proc macros prefers source directory.
macro-time = ["runtime"]