[package]
name = "mutate-macros"
description = "Proc macros, writing the code that generates guarantees."
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true, features = ["span-locations"]}
quote.workspace = true
syn.workspace = true
mutate-assets = {workspace = true, features = ["macro-time"]}

[dev-dependencies]
trybuild.workspace = true

[features]
