[package]
name = "mutate-vulkan"
description = "Vulkan engine components."
readme = "../README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ash.workspace = true
bytemuck = {workspace = true, features = ["derive"]}
half = { workspace = true, features = ["bytemuck"] }
parking.workspace = true
smallvec.workspace = true
thiserror.workspace = true

mutate-assets = {workspace = true, features = ["runtime"]}
mutate-untorn.workspace = true

winit = {workspace = true, optional = true}
ash-window = {workspace = true, optional = true}
raw-window-handle = {workspace = true, optional = true}

[features]
default = ["winit"]
winit = ["dep:winit", "dep:ash-window", "dep:raw-window-handle"]